fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,7 @@ nav > a {
     padding: 15px;
     background-color: #F0F0F3; /* Fond clair pour la première div */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    overflow: scroll;
 }
 
 .centered-h2-form {
